# swirl-dynamics

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
swirl_dynamics/: __init__.py
swirl_dynamics/data/: hdf5_utils.py  hdf5_utils_test.py  tfgrain_transforms.py  tfgrain_transforms_test.py  utils.py  utils_test.py  zarr_utils.py  zarr_utils_test.py
swirl_dynamics/lib/diffusion/: __init__.py  diffusion.py  diffusion_test.py  guidance.py  guidance_test.py  preconditioning.py  preconditioning_test.py  reshape_utils.py  reshape_utils_test.py  samplers.py  samplers_test.py  unets.py  unets3d.py  unets3d_test.py  unets_test.py  vivit.py  vivit_diffusion.py  vivit_diffusion_test.py  vivit_test.py
swirl_dynamics/lib/layers/: __init__.py  axial_attention.py  axial_attention_test.py  convolutions.py  convolutions_test.py  normalized_layers.py  normalized_layers_test.py  residual.py  residual_test.py  resize.py  resize_test.py  upsample.py  upsample_test.py
swirl_dynamics/lib/metrics/: __init__.py  probabilistic_forecast.py  probabilistic_forecast_test.py  regression.py  regression_test.py
swirl_dynamics/lib/networks/: convnets.py  convnets_test.py  cycle_gan.py  cycle_gan_test.py  encoders.py  encoders_test.py  fno.py  fno_test.py  hyper_unet.py  hyper_unet_test.py  nonlinear_fourier.py  nonlinear_fourier_test.py  rational_networks.py  rational_networks_test.py  unets.py  unets_test.py  utils.py  utils_test.py
swirl_dynamics/lib/solvers/: __init__.py  ode.py  ode_test.py  sde.py  sde_test.py  utils.py  utils_test.py
swirl_dynamics/projects/ergodic/: README.md  choices.py  generate_traj.py  ks_1d.py  lorenz63.py  main.py  measure_distances.py  ns_2d.py  rollout_weighting.py  stable_ar.py  utils.py
swirl_dynamics/projects/evolve_smoothly/: README.md  ansatzes.py  batch_decode.py  data_pipelines.py  encode_decode.py  latent_dynamics.py  main.py
swirl_dynamics/projects/genfocal/: README.md
swirl_dynamics/projects/weno_nn/: utils.py  (+2 more)
swirl_dynamics/templates/: __init__.py  callbacks.py  callbacks_test.py  evaluate.py  evaluate_test.py  models.py  train.py  train_states.py  train_states_test.py  train_test.py  trainers.py  trainers_test.py  utils.py  utils_test.py
(+178 files in other folders)
